Fix arrows being cut off in AP and missing "back" arrow on page 2.

--- a/css/segments.css
+++ b/css/segments.css
@@ -220,7 +220,6 @@ body.blues-only #bump-stage-overlay {
   text-indent: 100%;
   top: 1em;
   white-space: nowrap;
-  width: 4%;
 }
 
 #right.disabled {
